# ypyk-wechat

./: .index.py.swp  .signature.txt.swo  .signature.txt.swp  README.md  service_menu.txt  signature.txt  test.py  ticket.txt
convert2wav/: CMakeLists.txt  Yipai_ir2wav  encodingInterface.h  main.cpp  main2.cpp  main3.cpp  patternGen.h  patternGenCommon.cpp  patternGenTV.cpp
wechat/: .img_process.py.swp  .index.py.swp  .msg_process.py.swo  .vimrc  app.wsgi  context  event_process.py  get_state.py  get_user_basicMsg.py  get_user_msg.py  get_wavFile.py  img_process.py  index.py  msg_process.py  test.py
wechat/WAV/0f434cf2a2/: 3733a005a6
wechat/WAV/2b28dfc6fe/: 86b5241e02  86b5241e02.pcm
wechat/WAV/3be2796ff0/: 4227237b15.pcm
wechat/WAV/58867c97a2/: ded800a728
wechat/WAV/916c018198/: 8fb7fd58f1.pcm
wechat/WAV/b42bab1ecb/: 6b235dcd64.pcm
wechat/WAV/d5ce57d4cf/: 8909bbbac3  8909bbbac3.pcm
wechat/WAV/e11f116361/: 24eab7f8be.pcm
wechat/brand/: air_condition.txt  cable.txt  network_box.txt  tv.txt
wechat/python_db/: pyDB.py
wechat/static/css/: program_control.css
wechat/static/js/: orient.js  remote_control.js
wechat/templates/: index.html  test.html
wechat/tool/: .create_menu.py.swo  .create_menu.py.swp  create_menu.py  download_picture.py  get_user_msg.py  get_wavFile.py  get_wechat.py  picture_id
wechat/ypyk-web/: README.md
ypyk-web/wechat/: index.html
ypyk-web/wechat/css/: .remote_control.css.swp  body.css  remote_control.css
ypyk-web/wechat/js/: remote_control.js
ypyk-web/wechat/src/: program_control.html
(+756 files in other folders)
